--- a/index.html
+++ b/index.html
@@ -18,6 +18,70 @@
     </header>
 
     <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
+    <article class="lado-esquerdo">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+        recusandae veniam maiores accusamus maxime necessitatibus ipsum optio
+        facilis itaque non illum, minima possimus repellat? Fugiat ex vel quam
+        repudiandae neque commodi aliquam iusto delectus dolorem iure id fuga
+        voluptas rerum, assumenda suscipit perferendis qui repellat quia veniam
+        cum et maiores praesentium. Mollitia vitae ducimus voluptatum id quidem,
+        iste incidunt libero ipsum quod. Repellendus minima beatae ducimus
+        itaque deserunt odio nostrum quae rem error placeat! Eum officiis sit
+        neque porro modi delectus placeat commodi repellendus esse iusto laborum
+        ipsum incidunt qui omnis iure, veritatis maxime facere ad excepturi
+        laudantium suscipit. Repellat totam commodi nihil, veritatis iusto
+        dolores alias amet consequuntur deleniti nostrum nisi vero hic ducimus
+        eius natus eum sequi perspiciatis quaerat ad dolorem nesciunt non. Iure
+        minima dolorem veritatis quod delectus facere, dolores cupiditate veniam
+        quam eaque nam velit quo voluptates ab sed neque consectetur consequatur
+        explicabo, eveniet corrupti vero cumque. Tempora ex dolorum
+        reprehenderit dolorem, obcaecati magnam accusantium ipsam, deleniti,
+        animi nemo velit aut doloremque voluptatum natus exercitationem fugit
+        quae quis! Minima iure, vitae cumque earum velit ut vero maiores ullam
+        asperiores possimus debitis eligendi dignissimos doloremque et quia
+        impedit voluptatibus repellendus unde modi. Maxime dolorem cum eligendi
+        ad nisi? Optio sed aspernatur, voluptatibus autem sequi earum est saepe
+        eum rerum voluptatem voluptatum quasi mollitia amet placeat eaque iusto
+        quibusdam suscipit vitae nemo sit, illo numquam officia nihil. Itaque,
+        veniam earum tempore quas similique id vel eligendi quod facilis odit
+        mollitia omnis et accusamus blanditiis adipisci aliquid ea, quasi est
+        laboriosam, perferendis nobis. Adipisci quia doloremque numquam. Sit
+        doloribus odit, quasi sapiente animi exercitationem! Minus in vitae quas
+        distinctio perferendis, qui ipsum quo sapiente perspiciatis earum
+        similique assumenda dolor debitis reiciendis deserunt, necessitatibus
+        porro consequatur consequuntur, illum numquam tenetur error cupiditate
+        optio. Repudiandae necessitatibus, nulla doloremque ab itaque totam
+        molestiae aliquam voluptatum odit reprehenderit iusto ipsam excepturi
+        blanditiis minus aut velit, autem dolorum et, sunt doloribus repellat.
+        Dignissimos molestiae adipisci illo iure, quod, ex laudantium,
+        reprehenderit eos ipsum similique dolores? Nemo sunt ex sint velit
+        autem. Dolores, soluta reiciendis non laudantium odio praesentium quae,
+        ratione delectus doloribus voluptatum quasi!
+      </p>
+    </article>
+    <aside class="lado-direito">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure provident
+        quia amet expedita ducimus repudiandae error eaque deserunt aliquam,
+        explicabo, quaerat unde laboriosam necessitatibus dolor aut maiores
+        minima tempore perferendis, delectus incidunt nesciunt enim! Eius non
+        cum quidem tempora animi excepturi repellendus quod quisquam
+        necessitatibus et quos perspiciatis, voluptates earum veniam ratione
+        dolor molestiae dolorum nam. Ipsum mollitia quidem, doloremque nam ullam
+        velit eaque quaerat provident impedit commodi libero aliquam similique
+        a, deserunt ex harum non cumque tempore dolores labore veritatis
+        delectus! Odio qui eum natus, quidem illo eos beatae ipsam explicabo
+        voluptates libero officiis laborum quasi quisquam nobis. Neque atque
+        debitis veritatis porro praesentium, harum repellendus aspernatur fuga
+        illum eaque distinctio in optio eos nisi temporibus natus voluptatibus
+        repudiandae quos odio hic et assumenda minima soluta nulla? Deserunt ut
+        laborum veritatis, est laboriosam, officia tempora nobis nam possimus
+        numquam quaerat expedita quas. Quo non corrupti provident aut, inventore
+        dolorem.
+      </p>
+    </aside>
+
     <section id="listas">
       <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -47,5 +111,16 @@
     </section>
   </body>
 
-  <footer id="rodape"></footer>
+  <footer id="rodape">
+    <ul>
+      <li>
+        <a href="https://github.com/monteirohsm" target="_blank">GitHub</a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/monteiroshm" target="_blank"
+          >Linkedin</a
+        >
+      </li>
+    </ul>
+  </footer>
 </html>
