requisitos 5 inserindo lista nao numerica e 10 itens

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         <p>Boas praticas</p>
         <p>Soft Skill</p>
       </li>
+      <ul id="licoes_a_aprender">
+        <p>JavaScrit</p>
+        <p>FlexBoxCss</p>
+        <p>React</p>
+        <p>RTL</p>
+        <p>Metodologias Ageis</p>
+        <p>MongoDB</p>
+        <p>NodeJs</p>
+        <p>Arquiterura de Software</p>
+        <p>Python</p>
+        <p>Estrutura de Dados</p>
+      </ul>
     </section>
   </main>
 </body>
