--- a/index.html
+++ b/index.html
@@ -15,35 +15,43 @@
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo"><br>
       <a href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
-      <ol id="licoes_aprendidas">
-          <li>Unix</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Empatia</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Slack</li>
-          <li>Zoom</li>
-          <li>Inspect</li>
-          <li>Semantic HTML</li>
-      </ol>
-      <ul id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>DOM</li>
-          <li>Forms</li>
-          <li>CSS Responsive</li>
-          <li>ES6</li>
-          <li>HOF</li>
-          <li>Unit Tests</li>
-          <li>Reach</li>
-          <li>Node</li>
-          <li>SQL</li>
-      </ul>
-      <article class="paragrafo_text">
+      <table>
+          <tr>
+              <td>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+              </td>
+              <td>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>Reach</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                </ul>
+              </td>
+          </tr>
+      </table>
+      <article class="lado_esquerdo">
             <h3>Meu Aprendizado na Trybe</h3>
             <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
       </article>
-      <section class="paragrafo_text">
+      <section class="lado_direito">
          <aside>
               <p>Comecei minha jornada em TI com 9 anos,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
          </aside>
