Added article about the learning process (Requisite 8)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li>DOM</li>
         <li>ES6</li>
     </ul>
+    <article>O aprendizado na Trybe se dá de forma gradual, organizada e satisfatória. A curva de aprendizado é surpreendente: vamos dos fundamentos do Unix ao patamar de Desenvolvedor Full Stack (mais de 1500 horas de curso) em cerca de 1 ano! Contando com uma equipe sempre bastante suportiva e interessada em ajudar e aprender, trata-se de uma experiência única e bastante edificante.</article>
     <footer id="rodape">Aqui está meu rodapé!</footer>
 </body>
 </html>
