--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
         <table>
             
         </table>
-        <section>
-            <article>
-                <p>
-                    Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
-                </p>            
-            </article>
-            <aside>
+        <article class="lado-esquerdo">
+            <p>
+                Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
+            </p>            
+        </article>
+        <section>            
+            <aside class="lado-direito">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna. Aenean eget dictum odio, sed porttitor magna. Nunc maximus vitae est bibendum tempor.
                 </p>
             </aside>
+            <div class="clear"></div>
         </section>
         <a href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">Linkedin</a>
         <footer id="rodape"></footer>
