--- a/index.html
+++ b/index.html
@@ -24,5 +24,18 @@
   <li>Empatia.</li>
 </ol>
 
+<ul>
+    <li>JavaScript;</li>
+    <li>Lógica de Programação;</li>
+    <li>Inglês Técnico</li>
+    <li>Back-end;</li>
+    <li>Front-end;</li>
+    <li>Python;</li>
+    <li>Ciencias Da Computação;</li>
+    <li>Jogar melhor Amoung Us;</li>
+    <li>Ser Fluente no italiano;</li>
+    <li>Tocar Bateria;</li>
+</ul>
+
 </body>
 </html>
