teste de imagem com formato .svg

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>
                     Informacoes para contato:<br>
                     <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="uma logo do site linkedin"></a>
-                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="Instagram-Symbol.png" alt="Uma logo do site instagram que direciona para meu perfil da rede social"></a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="Uma logo do site instagram que direciona para meu perfil da rede social"></a>
                 </p>
             </footer>
         </main>
