--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <article id="my-learning">
         <h2>Meu Aprendizado:</h2>
         <p>Quando eu inicei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo depois comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender facilmente uma pagina HTML, e fazer paginas semânticamente corretas, além de aplicar um bom CSS nelas.</p>
-    </article>
+	</article>
+	<aside>
+		<h2>Relatos</h2>
+		Eu sempre me considerei uma pessoa comunicativa, e um dos melhor pontos na <i>trybe</i> é que eles não somente trabalham rigorosamente a parte técnica, como também a parte de soft skills, desde então sinto que estou me preparando cada vez mais para entrar no mercado de trabalho.</aside>
     <footer id="rodape">
 		<a href="https://github.com/pedrohrbispo" target="blank">GitHub</a>
     </footer>
