Requisito 2 - primeiro envio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Lições Aprendidas - Diogenes</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas</h1>
+        <h2 class="sub-titulo">Trybe Course</h2>
+    </header>
 </body>
 </html>
