Bonus 2: Alterar posiçõees

--- a/index.html
+++ b/index.html
@@ -16,67 +16,80 @@
       <a href="#">Contato</a>
     </nav>
   </header>
-  <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto" />
-  <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>HTML Semântico</li>
-    <li>Slack</li>
-    <li>Zoom</li>
-    <li>Inteligência emocional</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <li>Javascript</li>
-    <li>DOM</li>
-    <li>Forms</li>
-    <li>CSS responsivo</li>
-    <li>ES6</li>
-    <li>HOF</li>
-    <li>Testes unitários</li>
-    <li>React</li>
-    <li>Node</li>
-    <li>SQL</li>
-  </ul>
-  <table id="modulos_concluidos">
-    <tr>
-      <th>Fundamentos</th>
-      <th>Front End</th>
-      <th>Back End</th>
-      <th>Ciencia da Computação</th>
-    </tr>
-    <tr>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-    </tr>
-  </table>
-  <section>
-  <article>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
-      quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
-      explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-      sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
-      deserunt. Eveniet, amet perferendis consequuntur libero velit dolore,
-      atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
-      Molestiae sapiente non pariatur.
-    </p>
-  </article>
-  <aside>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
-      quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
-      explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-      sunt Lorem ipsum dolor.
-    </p>
-  </aside>
-  </section>
-  <footer id="rodape"></footer>
+ 
+   <div>
+    <section id="imagem_e_contatos">
+      <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto" />
+    
+      <nav id="contatos">
+      <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
+      <a href="https://www.linkedin.com/in/thiagogranville/ target="_blank">LinkedIn</a>
+      </nav>
+    </section>
+  
+    <section id="lista_e_tabelas">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inteligência emocional</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS responsivo</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Testes unitários</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+      <table id="modulos_concluidos">
+        <tr>
+          <th>Fundamentos</th>
+          <th>Front End</th>
+          <th>Back End</th>
+          <th>Ciencia da Computação</th>
+        </tr>
+        <tr>
+          <td>Sim</td>
+          <td>Não</td>
+          <td>Não</td>
+          <td>Não</td>
+        </tr>
+      </table>
+    </section>
+   </div>
+
+    <section id="artigo_aside">
+    <article>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
+        quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
+        explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+        sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
+        deserunt. Eveniet, amet perferendis consequuntur libero velit dolore,
+        atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
+        Molestiae sapiente non pariatur.
+      </p>
+    </article>
+    <aside>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
+        quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
+        explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+        sunt Lorem ipsum dolor.
+      </p>
+    </aside>
+    </section>
+    <footer id="rodape"><p>Todos os direitos reservados, Thiago Granville</p></footer> 
 </body>
 </html>
