correcao de tags id's  requisito 2

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </head>
     <body>
-        <nav id="cabecalho">
-            <header id="titulo">
-                <h1>Lucas Silva - DEV</h1>
+        <nav>
+            <header id="cabecalho">
+                <h1 id="titulo">Lucas Silva - DEV</h1>
             </header>
             <ul id="nav-btn">
                 <li><a href="#">Home</a></li>
