Arrumando as tag articles para passarem nos requisitos minimos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </article>
         <aside>
             <p>
-                Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe, simulando situações reais de trabalho em um time de desenvolvimento. Meus conhecimentos em física e matemática me proporcionaram habilidades que julgo importantes para programação.
+                Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe, simulando situações reais de trabalho em um time de desenvolvimento.
             </p>
         </aside>
     </main>
