--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--                                           --- MAIN ---                                                     -->
     <main>
         <div class="img-wrapper">
-            <img id="minha_foto" src="imagens/toselli.jpg" width="230px" alt="Uma foto de Pedro Toselli">
+            <img id="minha_foto" src="" width="230px" alt="Uma foto de Pedro Toselli">
         </div>
             <div class="main-name">
                 <h3>Pedro Toselli <br> Estudante de desenvolvimento web | Trybe</h3>
