--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
-    </header>   
+    </header>
     <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
     <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
     <section id="section">
@@ -45,6 +45,10 @@
       <li>Node</li>
       <li>SQL</li>
     </ul>
+    <aside>
+      <h3>Primeiro Projeto</h3>
+      <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em prática com o Git</p>
+    </aside>
     <footer id="rodape">
 
     </footer>
