--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
         </nav>
     </header>
     <main>
-        <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
-        <h2 >Johne Alves - <a href="https://www.linkedin.com/in/johne-alves/" target="blanch">https://www.linkedin.com/in/johne-alves/</a></h2>
+        <div id="perfil">
+            <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
+            <h2 >Johne Alves </h2>
+        </div>    
+        <table>
+            <tr><th colspan="2">Programa de formação</th></tr>
+            <tr><td>JavaScript</td><td>Node</td></tr>
+            <tr><td>HTML</td><td>Express.js</td></tr>
+            <tr><td>CSS</td><td>SQL</td></tr>
+            <tr><td>React</td><td>Git</td></tr>
+        </table>
         <div id="lista">
             <section>
                 <h3>Lições</h3><br>
