--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Lessons Lerned - Trybe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -23,12 +23,12 @@
         </header>
 
         <main>
-            <div>
+            <div id="sobre">
                 <h2>Saulo Kirchmaier Teixeira</h2>
                 <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
             </div>
 
-            <section class>
+            <section class="conteudo">
                     <h2>Estudado</h2>
                     <ol id="licoes_aprendidas">
                         <li>Unix/Shell</li>
@@ -44,7 +44,7 @@
                     </ol>
             </section>
 
-            <section>
+            <section class="conteudo">
                 <h2>A estudar</h2>
                 <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
