--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </ul>
     <article id="my-learning">
         <h2>Meu Aprendizado:</h2>
-        <p>Quando eu inicei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo depois comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender facilmente uma pagina HTML, e fazer paginas semânticamente corretas, além de aplicar um bom CSS nelas.</p>
+        <p>Quando eu inícei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo após comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender uma pagina HTML, e fazer paginas semanticamente corretas, além de aplicar um bom CSS nelas.</p>
 	</article>
 	<aside>
 		<h2>Relatos</h2>
