--- a/index.html
+++ b/index.html
@@ -12,40 +12,45 @@
     </header>
     <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
     <main>
-        <aside>
-            <ol id="licoes_aprendidas">
-                <li>Linux</li>
-                <li>Html</li>
-                <li>CSS</li>
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Zoom</li>
-                <li>Slack</li>
-                <li>Empatia</li>
-                <li>Git</li>
-                <li>GitHub</li>
-            </ol>
-        </aside>
-        <aside>
-            <li id="licoes_a_aprender">
-                <li>NodeJS</li>
-                <li>JavaScript</li>
-                <li>API</li>
-                <li>React</li>
-                <li>Soft Skills</li>
-                <li>SQL</li>
-                <li>Express</li>
-                <li>Empatia</li>
-                <li>MongoDB</li>
-            </li>
-        </aside>
+        <section>
+            <div>
+                <ol id="licoes_aprendidas">
+                    <li>Linux</li>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Zoom</li>
+                    <li>Slack</li>
+                    <li>Empatia</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                </ol>
+            </div>
+            <div>
+                <li id="licoes_a_aprender">
+                    <li>NodeJS</li>
+                    <li>JavaScript</li>
+                    <li>API</li>
+                    <li>React</li>
+                    <li>Soft Skills</li>
+                    <li>SQL</li>
+                    <li>Express</li>
+                    <li>Empatia</li>
+                    <li>MongoDB</li>
+                </li>
+            </div>
+        </section>
         <article>
             <p>2020 foi um ano de grandes mudanças mundiais e pessoais. <br> Este ano mudei totalmente, da aviação para tecnologia, depois de formado piloto de avião e três anos trabalhando na Latam, iniciei a faculdade de Análise e Desenvolvimento de Sistemas e ingressei em um dos concursos mais concorridos do Brasil na trybe e agora estou desenvolvendo junto com a trybe um modelo inovador de educação e aprendendo desenvolvimento web.
              O curso nos ensina: Construir um front-end, Soft skills, Construir um back-end, Algoritmos, Metodologias Ágeis, Rotinas de desenvolvimento.</p>
         </article>
- 
+        <asiede>
+            <p>O Curso é desafiador e ao mesmo tempo incentivador, contamos com os melhores recursos e ótimos instrutores</p>
+        </asiede>
     </main>
     <footer id="rodape">
+       <nav>
         <table>
             <tr>
                 <th>Links Pessoais</th>
@@ -67,6 +72,8 @@
                 <td><a href="https://www.instagram.com/lopzcaue/?hl=pt-br" target="_blank">Instagram</a></td>
             </tr>
         </table>
+       </nav>
+
     </footer>
 </body>
 </html>    
