--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li>SQL</li>
         </ul>
         <article>
+            <h2>Título Artigo</h2>
             <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
         </article>
         <aside>
