Requisito Bônus 12 Concluido

--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
             <li>Comunicação</li>
             <li>Colaboração</li>
         </ul>
+        <table>
+            <tr>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+            </tr>
+            <tr>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+            </tr>
+            <tr>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+            </tr>
+            <tr>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+            </tr>
+            <tr>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+            </tr>
+          </table>
     </section>
     <footer id="rodape">
         <a href="https://www.linkedin.com/in/danrlley-rodrigues/" target="_blank">
