--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="prin">
         <section id="cima">
             <img src="rsz_1rsz_20201004_155453.jpg" alt="minha foto" id="minha_foto">
             <section>
@@ -50,10 +50,10 @@
                 </ul>
             </section>
         </section>
-        <article>
+        <article id="lado-esquerdo">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quod magnam minima et dolorem quos. Voluptatibus, velit dolorem similique a laboriosam nam, itaque autem officia expedita officiis ducimus quasi ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat incidunt, labore eaque voluptatum iusto culpa quo voluptatibus. Enim delectus voluptas pariatur hic. Placeat dicta libero vero perspiciatis, nobis et?</p>
         </article>
-        <aside>
+        <aside id="lado-direito">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nisi voluptas tenetur amet quae, minus maiores unde deleniti ullam temporibus eos. Nostrum nemo fuga recusandae, veniam vero non accusantium quidem!</p>
         </aside>
         <section>
