--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   </header>
   <main>
     <img id="minha_foto" src="./img/Cris1.jpeg" alt="">
+    <ol id="licoes_aprendidas">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ol>
   </main>
   <footer>
     <h4>Cristiano L Duarte</h4>
