--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
   <header id="cabecalho">
+    <p>
+      <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+        <img src="https://achecker.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102" />
+      </a>
+    </p>
+
     <h1 id="titulo">Lessons Learned</h1>
 
     <nav>
@@ -57,7 +63,7 @@
 
   <section>
     <article>
-      <h2>artigo sobre seu aprendizado</h2>
+      <h2>Sobre seu aprendizado</h2>
       <p>
         <strong>Nada facil!</strong>
         Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
