--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">titulo</h1>
+            <h1 id="titulo">Lições Aprendidas em 2 Semanas de Trybe!</h1>
             <nav>
-                
+                <h1>Home</h1>
             </nav>
         </header>
         <figure><img id="minha_foto" src="minha_foto.jpg" alt=""></figure>
