Corrige requisitos 8 e 9 (tenta de novo)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned</title>
+    <!-- Font links -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Satisfy&display=swap" rel="stylesheet">
+    <!-- CSS link -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -13,6 +17,9 @@
     <main>
         <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
         <section>
+            <header>
+                <h2>Lições aprendidas</h2>
+            </header>
             <ol id="licoes_aprendidas">
                 <li>Unix e Bash</li>
                 <li>Versionamento com Git</li>
@@ -27,6 +34,9 @@
             </ol>
         </section>
         <section>
+            <header>
+                <h2>Lições a aprender</h2>
+            </header>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
                 <li>Flexbox</li>
@@ -46,38 +56,36 @@
             </header>
             <article>
                 <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco, mas, parando para analisar realmente, aprendi demais! Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer.</p>
-                <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk). <strong>#VQV</strong></p>
+                <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk).<strong>#VQV</strong></p>
             </article> 
         </section>
         <section>
             <header>
                 <h2>Um breve resumo sobre o currículo da Trybe</h2>
             </header>
-            <article>
-                <table>
-                    <tr>
-                        <th>Fundamentos do Desenvolvimento Web</th>
-                        <td>Unix & Bash, Git, HTML & CSS, JavaScript e testes</td>
-                    </tr>
-                    <tr>
-                        <th>Desenvolvimento Front-end</th>
-                        <td>React, Redux e consumo de APIs</td>
-                    </tr>
-                    <tr>
-                        <th>Desenvolvimento Back-end</th>
-                        <td>Bancos de dados, NodeJS, ExpressJS</td>
-                    </tr>
-                    <tr>
-                        <th>Computer Science</th>
-                        <td>Python, Estruturas de dados e resolução de problemas</td>
-                    </tr>
-                </table>
-            </article>
+            <table>
+                <tr>
+                    <th>Fundamentos do Desenvolvimento Web</th>
+                    <td>Unix & Bash, Git, HTML & CSS, JavaScript e testes</td>
+                </tr>
+                <tr>
+                    <th>Desenvolvimento Front-end</th>
+                    <td>React, Redux e consumo de APIs</td>
+                </tr>
+                <tr>
+                    <th>Desenvolvimento Back-end</th>
+                    <td>Bancos de dados, NodeJS, ExpressJS</td>
+                </tr>
+                <tr>
+                    <th>Computer Science</th>
+                    <td>Python, Estruturas de dados e resolução de problemas</td>
+                </tr>
+            </table>
         </section>
         <aside>
             <section>
                 <header>
-                    <h2>A briga com a centralização vertical</h2>
+                    <h2>A centralização vertical</h2>
                 </header>
                 <article>
                     <p>Após a aula do bloco 3.3, onde estudamos um pouco mais sobre os seletores no CSS, tentei aplicar na página do meu portfólio o conteúdo visto. Criei uma seção a qual precisava centralizar um conteúdo verticalmente e passei o final de semana todo tentando fazê-lo.</p>
