--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<ol id="licoes_aprendidas">
+
+  <ol id="licoes_aprendidas">
   <li>Git;</li>
   <li> github;</li>
   <li>HTML;</li>
@@ -24,7 +25,7 @@
   <li>Empatia.</li>
 </ol>
 
-<ul>
+<ul id="licoes_a_aprender">
     <li>JavaScript;</li>
     <li>Lógica de Programação;</li>
     <li>Inglês Técnico</li>
@@ -37,5 +38,6 @@
     <li>Tocar Bateria;</li>
 </ul>
 
+<footer id="rodape">Sigam-me no GitHub: @Kamilavrhcp </footer>
 </body>
 </html>
