--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Giovani Lopes Diccini</h1>
+            <nav>
+                <ul>
+                    <li><a href="#article">Artigo</a></li>
+                    <li><a href="#rodape">Rodapé</a></li>
+                </ul>
+            </nav>
         </header>
         <img id="minha_foto" src="giovani.jpeg" alt="imagem_autor">
         <ol id="licoes_aprendidas">
@@ -38,7 +44,7 @@
         <table>
             
         </table>
-        <article class="lado-esquerdo">
+        <article id="article" class="lado-esquerdo">
             <p>
                 Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
             </p>            
@@ -52,6 +58,10 @@
             <div class="clear"></div>
         </section>
         <a href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">Linkedin</a>
-        <footer id="rodape"></footer>
+        <footer id="rodape">
+            <p>
+                Created by, <br>Giovani Diccini.
+            </p>
+        </footer>
     </body>
 </html>
