adicionando requisitos bonus e alteracoes de layout

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
+        <h1>Lessons Learned - Trybe!</h1>
     </header>
     <nav class="horizontal-nav-bar">
         <ul>
@@ -17,18 +19,23 @@
             <li><a href="">Contato</a></li>
         </ul>
     </nav>
-    <main>
-        <section>
-            <article>
-                <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
-            </article>
+    <main class="main-container">
+        <section class="photo-name">
+            <img id="minha_foto" src="images/me.jpg" alt="minha foto">
+            <h1 id="titulo"> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
         </section>
-        <section>
-            <aside>
-                <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
-            </aside>
-        </section>
-        <img id="minha_foto" src="images/me.jpg" alt="minha foto">
+        <div class="article-box">
+            <section>
+                <article>
+                    <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
+                </article>
+            </section>
+            <section>
+                <aside>
+                    <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
+                </aside>
+            </section>
+        </div>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
