Listas display lado a lado

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <h1 id="titulo"><em>Danilo Leone Estevam</em></h1>
               
      </header>
-            <img id="minha_foto" width="300px" padding= "100px"  src="foto_perfil.jpg" alt="Minha foto não muito recente mas era a que eu tinha nessa maquina, sorrindo centralizado com tons de cépia">
+            <img id="minha_foto" width="300px" src="foto_perfil.jpg" alt="Minha foto não muito recente mas era a que eu tinha nessa maquina, sorrindo centralizado com tons de cépia"><br>
         
             <ol id="licoes_aprendidas"> <a>Lições aprendidas</a>
                 <li>Git</li>
