Refazendo erros passos 8 e 9

--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições que aprendi </h1>
     </header>
-    <img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
-    <ol id="licoes_aprendidas">
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Unix e Bash</li>
-        <li>Html</li>
-        <li>CSS</li>
-        <li>Inteligência emocional</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Linkedin</li>
-        <li>Semantic HTML</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-        <li>NoSQL</li>
-        <li>HOF</li>
-        <li>ES6</li>
-    </ul>
-    <article id="my-learning">
+	<img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
+	<section id="lists">
+		<ol id="licoes_aprendidas">
+			<li>Git</li>
+			<li>GitHub</li>
+			<li>Unix e Bash</li>
+			<li>Html</li>
+			<li>CSS</li>
+			<li>Inteligência emocional</li>
+			<li>Slack</li>
+			<li>Zoom</li>
+			<li>Linkedin</li>
+			<li>Semantic HTML</li>
+		</ol>
+		<ul id="licoes_a_aprender">
+			<li>JavaScript</li>
+			<li>DOM</li>
+			<li>Forms</li>
+			<li>CSS Responsive</li>
+			<li>React</li>
+			<li>Node</li>
+			<li>SQL</li>
+			<li>NoSQL</li>
+			<li>HOF</li>
+			<li>ES6</li>
+		</ul>
+	</section>
+		<article id="my-learning">
         <h2>Meu Aprendizado:</h2>
         <p>Quando eu inícei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo após comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender uma pagina HTML, e fazer paginas semanticamente corretas, além de aplicar um bom CSS nelas.</p>
 	</article>
