Adição do artigo passagem do meu aprendizado

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <li>SQL</li>                
             </ul>
         </section>
+        <section>
+            <p>Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar 
+                matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através 
+                de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+        </section>
 </article>   
 <footer id="rodape">
     <p>Saiba mais sobre a <a href="https://betrybe.com" target="_blank">Trybe</a></p>
