--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>projeto1</title>
@@ -15,7 +16,7 @@
                     <tr>
                         <td><a href="#main">Home</a></td>
                         <td><a href="#rodape">Reference</a></td>
-                        <td><a href="">Contact</a></td>
+                        <td><a href="#rodape">Contact</a></td>
                     </tr>
                 </table>
             </nav>
