--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </table>
     </section>
 
-    <section id="">
+    <section id="learning-article">
         <article>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum aliquam corrupti fuga officiis at animi quisquam distinctio alias perspiciatis? Modi, molestiae! Aspernatur perferendis eveniet temporibus aut beatae. Mollitia, sunt. <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, magni sunt, quia cupiditate quasi nemo similique quo deserunt voluptatibus at laborum explicabo accusamus! Rem, nam. Amet facilis praesentium aperiam eius!</p>
