Realizaçao do requisito 5 e fix do requisito 4: listas ordenadas para 10 itens aprendidos e 10 itens a aprender.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section>
             <h3>Lições aprendidas na Trybe:</h3>
-            <ul id="licoes_aprendidas">
+            <ol id="licoes_aprendidas">
                 <li>Como operar o shell</li>
                 <li>Operando em diretórios e navegando neles usando Bash</li>
                 <li>Como trabalhar com o GIT</li>
@@ -28,7 +28,23 @@
                 <li>Box Model do CSS</li>
                 <li>Entendimento básico de como a internet funciona</li>
                 <li>Como exercitar a empatia no ambiente de trabalho</li>
-            </ul>
+            </ol>
+        </section>
+
+        <section>
+            <h3>Lições que ainda vou aprender:</h3>
+            <ol id="licoes_a_aprender">
+                <li>Lógica de programação</li>
+                <li>Trabalhar com Javascript</li>
+                <li>Trabalhar com React</li>
+                <li>Preparar páginas responsivas</li>
+                <li>Testes unitários</li>
+                <li>Realização de testes automáticos usando JEST</li>
+                <li>Modelagem de banco de Dados</li>
+                <li>Metodologias Ágeis</li>
+                <li>Várias lições de soft skills que irão contribuir pra me tornar uma pessoa melhor :D</li>
+                <li>Entre outras...</li>
+            </ol>
         </section>
 
 
