Finishing Requisite #10 to #15 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -11,40 +11,56 @@
         <h1 id="titulo">Lessons Learned Project</h1>
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
-
-    <ol id="licoes_aprendidas">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>GIT</li>
-        <li>GitHub</li>
-        <li>Softskills Empathy</li>
-        <li>Softskills Learning some emotions</li>
-        <li>Softskills Emotional Management</li>
-        <li>Softskills Time Management</li>
-        <li>Softskills Priority Definitions</li>
-        <li>Who is Pharaooooo!!</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>Javascript</li>
-        <li>Frameworks</li>
-        <li>Computer Science</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Softskills Learning emotions</li>
-        <li>Softskills Emotional and Reaction Management</li>
-        <li>Softskills Time Management</li>
-        <li>Softskills Priority Definitions</li>
-        <li>Softskills Empathy</li>
-    </ul>
-    <article>
+    <section id="lessons">
+        <ol id="licoes_aprendidas">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GIT</li>
+            <li>GitHub</li>
+            <li>Softskills Empathy</li>
+            <li>Softskills Learning some emotions</li>
+            <li>Softskills Emotional Management</li>
+            <li>Softskills Time Management</li>
+            <li>Softskills Priority Definitions</li>
+            <li>Who is Pharaooooo!!</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>Frameworks</li>
+            <li>Computer Science</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Softskills Learning emotions</li>
+            <li>Softskills Emotional and Reaction Management</li>
+            <li>Softskills Time Management</li>
+            <li>Softskills Priority Definitions</li>
+            <li>Softskills Empathy</li>
+        </ul>
+    </section>
+    <article id="lado-esquerdo">
         <p>Aprendendo a aprender - Go Tryber</p>
         <p>Por conseguinte, a execução dos pontos do programa nos obriga à análise dos métodos utilizados na avaliação de resultados. Por outro lado, a complexidade dos estudos efetuados facilita a criação do impacto na agilidade decisória. Assim mesmo, a contínua expansão de nossa atividade acarreta um processo de reformulação e modernização das direções preferenciais no sentido do progresso. </p>
     </article>
-    <aside>
+    <aside id="lado-direito">
         <p>When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.Today, I'm studying hard to become a elite software develop with Trybe help.</p>
     </aside>
+    
+    <table class="tables-styles">
+        <thead>Cabecalho da tabela</thead>
+        <body>
+            <tr>
+                <td>data 1 - row 1</td>
+                <td>data 2 - row 1</td>
+            </tr>
+            <tr>
+                <td>data 1 - row 2</td>
+                <td>data 2 - row 2</td>
+            </tr>
+        </body>
+    </table>
     <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
     <footer id="rodape">
+        <p>This my foot</p>
     </footer>
 </body>
 </html>
